--- a/website/style.css
+++ b/website/style.css
@@ -90,6 +90,7 @@ a:hover{
 	border:none;
     border-bottom: 1px solid #ddd;
 	font-family: "Comic sans ms";
+	text-align:center;
 		
 } 
 .table tr:hover {background-color: #f5f5f5;}
@@ -104,13 +105,18 @@ a:hover{
 	
 }
 
+.table th.raum{
+	width:5%;	
+	
+}
+
 .table th.lehrer{
 	width:10%;	
 	
 }
 
 .table th.besonderheiten{
-	width:80%;	
+	width:75%;	
 	
 }
 
